--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,26 @@
 name: Auto Update CF IP
-
 on:
   schedule:
     - cron: '0 */6 * * *'
   workflow_dispatch:
-
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: write # 显式授予写权限
+      contents: write
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-
-      - name: Run script
+      - name: Run
         run: |
           pip install requests
           python update.py
-
-      - name: Commit and Push
+      - name: Push
         run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
+          git config --local user.email "actions@github.com"
+          git config --local user.name "github-actions"
           git add sub.txt
-          # 检查是否有内容变化，防止空提交报错
-          if git diff --staged --quiet; then
-            echo "No changes to commit"
-          else
-            git commit -m "Update subscription $(date)"
-            git push
-          fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          git commit -m "Update nodes" || exit 0
+          git push
