--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,14 +2,14 @@ name: Auto Update CF IP
 
 on:
   schedule:
-    - cron: '0 */6 * * *' # 每 6 小时自动运行一次
+    - cron: '0 */6 * * *' # 每6小时运行一次
   workflow_dispatch: # 支持手动点击运行
 
 jobs:
   build:
     runs-on: ubuntu-latest
     
-    # 核心修复 1：显式声明对内容的写权限
+    # 核心修复：显式声明写权限，解决 13.png 中的 403 错误
     permissions:
       contents: write
 
@@ -17,7 +17,6 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
         with:
-          # 核心修复 2：持久化凭据以允许后续 Push
           persist-credentials: true
 
       - name: Set up Python
@@ -32,7 +31,7 @@ jobs:
         run: python update.py
 
       - name: Commit and Push Changes
-        # 核心修复 3：使用 GITHUB_TOKEN 进行身份验证
+        # 核心修复：在环境变量中引入系统自带的 TOKEN 认证
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -40,10 +39,11 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git add sub.txt
           
-          # 检查文件是否有变化，避免无意义的提交导致报错
+          # 检查是否有文件变化，避免无意义的提交报错
           if git diff --staged --quiet; then
             echo "No changes in sub.txt, skipping push."
           else
             git commit -m "Auto-update subscription nodes: $(date)"
+            # 使用默认配置推送，Actions 会自动处理认证
             git push origin main
           fi
