--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,19 +2,16 @@ name: Auto Update CF IP
 
 on:
   schedule:
-    - cron: '0 */6 * * *' # 每6小时运行一次
-  workflow_dispatch: # 支持手动点击运行
+    - cron: '0 */6 * * *'
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
-    # 核心修复：显式声明写权限，解决 13.png 中的 403 错误
     permissions:
-      contents: write
-
+      contents: write # 必须显式声明写权限
     steps:
-      - name: Checkout Repository
+      - name: Checkout
         uses: actions/checkout@v3
         with:
           persist-credentials: true
@@ -24,26 +21,20 @@ jobs:
         with:
           python-version: '3.9'
 
-      - name: Install Dependencies
-        run: pip install requests
+      - name: Run script
+        run: |
+          pip install requests
+          python update.py
+          # 调试：查看生成的 sub.txt 大小
+          ls -lh sub.txt
 
-      - name: Run Update Script
-        run: python update.py
-
-      - name: Commit and Push Changes
-        # 核心修复：在环境变量中引入系统自带的 TOKEN 认证
+      - name: Commit and Push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add sub.txt
-          
-          # 检查是否有文件变化，避免无意义的提交报错
-          if git diff --staged --quiet; then
-            echo "No changes in sub.txt, skipping push."
-          else
-            git commit -m "Auto-update subscription nodes: $(date)"
-            # 使用默认配置推送，Actions 会自动处理认证
-            git push origin main
-          fi
+          # 强制提交，即使内容看起来没变
+          git commit -m "Auto update sub: $(date)" || echo "No changes to commit"
+          git push origin main
