--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,15 @@
-name: Update CF Nodes
+name: Auto Update Nodes
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: '0 * * * *' # 核心设置：每小时整点自动执行一次
+    - cron: '0 */1 * * *' # 每小时运行一次
+  workflow_dispatch:      # 允许手动运行
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
+      - name: Checkout Code
         uses: actions/checkout@v3
 
       - name: Set up Python
@@ -17,19 +17,19 @@ jobs:
         with:
           python-version: '3.9'
 
-      - name: Install Dependencies
+      - name: Install dependencies
         run: pip install requests
 
-      - name: Run Update Script
-        env:
-          USER_ID: ${{ secrets.USER_ID }}
-          HOST: ${{ secrets.HOST }}
+      - name: Run Script
         run: python update.py
+        env:
+          USER_ID: ${{ secrets.USER_ID }} # 建议将关键信息放在 Secrets 中
 
       - name: Commit and Push
         run: |
-          git config --global user.name "GitHub Action"
-          git config --global user.email "action@github.com"
+          git config --global user.name "actions-user"
+          git config --global user.email "actions@github.com"
           git add sub.txt
+          # 只有当文件有变动时才提交，防止图 8 中的重复 commit
           git commit -m "Auto-update nodes at $(date)" || exit 0
           git push
